# BigAppleRecSports

./: .envrc.example  .envrc.test  .gitignore  .pre-commit-config.yaml  BARS_GIT_SETUP.md  CONTRIBUTING.md  CORE_LOGIC_BACKUP.md  DEPLOYMENT.md  GOOGLE_SHEETS_SETUP_GUIDE.md  Makefile  PRE_COMMIT_GUIDE.md  PRE_COMMIT_SETUP.md  README.md  RENDER_DEPLOYMENT.md  SECURITY.md  SLACK_ARCHITECTURE_REFACTOR_PLAN.md  SLACK_REFACTOR_PLAN.md  bars  bars-monorepo.code-workspace  bars_cli-customer-properties-refactor-plan.md  bars_cli-skeleton-commands-summary.md  bulk_add_commands.sh  clasp_helpers.sh  compare_json.py  conftest.py  debug_parser_export.py  justfile  package-lock.json  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  render.yaml  requirements.txt  sample_shopify_webhook_orders_cancel.json  sample_shopify_webhook_orders_create.json  sample_shopify_webhook_orders_update_on_order_cancel.json  sample_shopify_webhook_orders_update_on_refund_create.json  sample_shopify_webhook_products_update.json  sample_shopify_webhook_products_update_on_order.json  sample_shopify_webhook_refunds_create.json  (+9 more)
backend/: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Makefile  ORDERS_API_README.md  PRODUCTION_DEPLOYMENT.md  README.md  REFACTORING_SUMMARY.md  SLACK_WEBHOOK_TESTING.md  TESTING_GUIDE.md  VERSION_MANAGEMENT.md  __init__.py  basedpyrightconfig.json  config.py  debug_env.py  debug_test.py  env.example  export_orders_by_product.py  generate_webhook_signature.py  load_refunds_to_dynamo.py  main.py  migrate_waitlist_sheet.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  routes.py  run.py  run_integration_tests.py  run_slack_tests.py  run_slack_webhook_tests.py  scripts.sh  show_new_message_format.py  test_email_mismatch_message.py  test_error_codes.py  (+10 more)
backend/config/: __init__.py  config.py  google.py  main.py  main_config.py  shopify.py  slack.py
backend/config_old_deprecated/: __init__.py  main.py  shopify.py  slack.py
backend/controllers/: __init__.py
backend/core/: api_errors.py  clients.py  config.py  logging.py
backend/lib/: tooling
backend/models/: __init__.py  requests.py
backend/modules/: __init__.py  run_integration_tests.py
backend/registrations/: app.py  main.py  pyproject.toml  render.yaml  router.py  routes.py
backend/routers/: admin.py  google.py  leadership.py  orders.py  products.py  refunds.py  shopify.py  shopify_api.py  slack.py  slack_api.py  theme_templates.py  webhooks.py
backend/scripts/: make_scripts.sh  run_consolidated_tests.py  run_tests.sh
backend/server/: index.ts  package.json  tsconfig.json
backend/services/: __init__.py  leadership_service.py  orders_service.py.old  shopify_service.py  slack_service.py  slack_service.py.old  webhooks_service.py
backend/shared/: __init__.py  api_models.py  auto_export.py  check_dict_equivalence.py  date_utils.py  dict_utils.py  exceptions.py  fetch_order_from_shopify.py  fetch_shopify_orders.py  fetch_shopify_products.py  flatten_dict_data.py  model_config.py  normalizers.py  order_fetcher.py  package.json  shopify_normalizers.py  signature_verification.py  string_utils.py  tsconfig.json  validators.py
backend/testing/: run_tests.py
backend/tests/: README.md  __init__.py  conftest.py  requirements.txt  test_is_valid_product_creation_request.py  test_products_service.py  test_products_service_old.py  test_refunds_api.py
backend/utils/: __init__.py  date_utils.py  dates.py  flatten_dict_data.py  money.py  orders.py  shopify_refunds.py  test_date_utils_weeks.py  test_weeks_in_product_description.py  validators.py
bars_cli/: __init__.py  main.py  models  pyproject.toml  requirements.txt
bars_cli/_core/: __init__.py  command_registry.py  context.py  legacy_services.py  prompts.py  validators.py
bars_cli/backend_services/: __init__.py  google  shared  shopify  slack
bars_cli/clients/: __init__.py  dev_bot.py  leadership_bot.py  shopify_sgqlc_client.py
bars_cli/commands/: __init__.py  compare_csv.py  utils.py
bars_cli/utils/: __init__.py  compare_csv.py  csv_utils.py  data_parsing.py  order_analysis.py
lambda/: compare_aws_to_local.sh  pyproject.toml
lambda/functions/: README.md
lib/: config.py  external_apis.py  pyproject.toml
lib/domain/: __init__.py  calculate_discounted_schedule.py
lib/tests/: test_eval_payload.py  test_slack_config.py
lib/tooling/: __init__.py  batch_run.py
scripts/: backend_version_manager.py  backup_gas_projects.sh  check_required_fields.py  compare_all_gas_projects.py  deploy  deploy_lambda_function.sh  deploy_to_render.sh  detect_secrets.py  enhance_gas_logging.sh  export_orders_by_product.py  generate_types.py  git-commit-bars  github_secrets_manager.py  install.py  install_pipx_environment.py  investigate_waitlist_bug.py  load_waitlist_to_dynamo.py  pre_deploy_render.py  prompt_utils.py  pyproject.toml  requirements-codegen.txt  safe_commit.sh  setup_direnv.sh  setup_local_development.py  setup_version_management.sh  shopify-api-calls-verification.md  sync-github-secrets.sh  sync-secrets-from-env.sh  sync_pyproject_dependencies.py  sync_render_secrets.py  test_consolidation_proposal.md  update_ngrok_urls.py  validate_comparison_system.py  version_manager.py
scripts/_shared/: path_utils.py
scripts/ci/: __init__.py  get_python_version.py  install_dependencies.py  run_script.py
scripts/claude-hooks/: post_slack_apps_edit_block_builder_reminder.sh
scripts/compilation/: __init__.py  __main__.py  compile_main.py  repo_path_resolvers.py
scripts/compilation_helpers/: __init__.py  compilation_check_main.py
scripts/deployment/: deploy_aws.sh  deploy_backend.py  deploy_google.sh  pull_google.sh  push_google.sh  setup_render_env.sh  version_manager.py
scripts/file_comparison/: __init__.py  _code_block_mover.py  _file_helpers.py  code_block_mover.py  compare_all_gas_projects.py  compare_at_path.py  fetchers.py  (+7 more)
shared_utilities/: README.md  __init__.py  model_config.py  paths.py  prompts.py  pyproject.toml  shopify_schema.py  validators.py
(+3273 files in other folders)
