[project]
name = "bars-monorepo"
version = "1.0.0"
description = "Big Apple Rec Sports - Monorepo Development Tools"
requires-python = ">=3.14"
readme = "README.md"

# No runtime dependencies at root level - those go in individual projects
dependencies = [
    "python-dotenv>=1.0.0",
    "click-extra>=0.15.0",
    "firebase-admin>=7.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "google-auth>=2.49.1",
    "google-api-python-client>=2.192.0",
    "boto3>=1.34.0",
    "httpx>=0.27.0",
    "gql>=4.0.0",
    "autoregistry>=1.3.0",
]

[project.optional-dependencies]
dev = [
    # Linting & Formatting
    "ruff>=0.1.0",

    # Type Checking
    "mypy>=1.0.0",

    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",

    # AWS Mocking (for lambda tests)
    "moto>=4.0.0",

    # HTTP Testing
    "httpx>=0.27.0",

    # Pre-commit Hooks
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []  # Root is not a package, just dev tools

# =============================================================================
# UV SOURCES CONFIGURATION
# =============================================================================
[tool.uv.sources]
# Centralized local package resolution for monorepo.
# Workspace members can be referenced by name from any other member via
# `<name> = { workspace = true }` in that member's [tool.uv.sources]; the
# entries below only exist for the root project's own dependencies.
bars-shared-utilities = { workspace = true }

[tool.uv.workspace]
# `backend` and `backend/registrations` are excluded: backend pins 10 deps to
# exact versions that conflict with the rest of the monorepo's resolution.
# They stay standalone projects with their own [tool.uv.sources] path entries.
# When backend's pins are relaxed it can be added here as a member.
members = [
    "bars_cli",
    "lib/clients/shopify-client",
    "scripts",
    "shared_utilities",
    "aws/lambda/functions/ShopifyProductUpdates",
    "aws/lambda/functions/ShopifyRefundHandler",
]
exclude = [
    "backend",
    "slack-apps",
]

# =============================================================================
# RUFF CONFIGURATION (applies to all projects)
# =============================================================================
[tool.ruff]
line-length = 120
target-version = "py314"

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    ".venvs",
    "__pycache__",
    "node_modules",
    ".pytest_cache",
    ".ruff_cache",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

# =============================================================================
# PYTEST CONFIGURATION (monorepo-wide)
# =============================================================================
[tool.pytest.ini_options]
# Test discovery paths for all projects
testpaths = [
    "backend/tests",
    "backend/routers/tests",
    "lambda/functions/tests",
    "bars_cli/tests",
    "shared_utilities/tests",
    "lib/tests",
]

# Python path for imports
pythonpath = [
    ".",
    "backend",
    "lambda/functions",
    "lambda/layers/bars_common_utils",
    "bars_cli",
    "shared_utilities",
]

# Test execution options
addopts = [
    "-v",                    # Verbose output
    "--tb=short",            # Short traceback format
    "--strict-markers",      # Strict marker validation
    "--strict-config",       # Strict config validation
]

# Test markers
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# =============================================================================
# COVERAGE CONFIGURATION
# =============================================================================
[tool.coverage.run]
source = [
    "backend",
    "lambda/functions",
    "bars_cli",
    "shared_utilities",
]
omit = [
    "*/tests/*",
    "*/.venv/*",
    "*/node_modules/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# =============================================================================
# MYPY CONFIGURATION
# =============================================================================
[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enable
ignore_missing_imports = true

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
