[project]
name = "bars-monorepo"
version = "1.0.0"
description = "Big Apple Rec Sports - Monorepo Development Tools"
requires-python = ">=3.14"
readme = "README.md"

dependencies = [
    # Config / settings
    "python-dotenv>=1.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",

    # Data manipulation
    "python-benedict[io,parse]>=0.37.0",
    "python-box>=7.4.1",
    "glom>=25.12.0",
    "caseutil>=0.7.2",
    "python-dateutil>=2.9.0",
    "anyio",
    "anytree>=2.13.0",
    "python-fsutil>=0.16.1",
    "polars",

    # HTTP + cloud clients
    "google-auth>=2.49.1",
    "google-api-python-client>=2.192.0",
    "boto3>=1.34.0",
    "httpx2[cli,http2]",
    "httpx-retries>=0.4.6",
    "aiohttp>=3.9",
    "gql>=4.0.0",
    "autoregistry>=1.3.0",
    "tldextract>=5.3.1",
    "beautifulsoup4>=4.12",

    # CLI / interactive tools
    "cyclopts>=4.5.1",
    "rich>=13",
    "pyperclip>=1.11.0",
    "questionary",
    "prompt-toolkit>=3.0.52",
]



[dependency-groups]
dev = [
    # Linting & formatting
    "ruff>=0.1.0",
    # Type checking
    "mypy>=1.0.0",
    "pyright>=1.1.409",
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-rich",
    "hypothesis",
    # Import analysis
    "import-linter>=2.6",
    "knot-imports>=0.1.0",
    # client mocking
    "moto>=4.0.0",
    "httpx2-pytest",
    # GraphQL codegen (typed clients from .graphql queries)
    "ariadne-codegen>=0.14.0",
    # Pre-commit hooks
    "pre-commit>=3.0.0",
    "boto3-stubs[scheduler]>=1.43.33",
    "basedpyright>=1.39.9",
]



[tool.uv]
package = false

[tool.uv.sources]
# Centralized local package resolution for monorepo.
# Workspace members can be referenced by name from any other member via
# `<name> = { workspace = true }` in that member's [tool.uv.sources]; the
# entries below only exist for the root project's own dependencies.
# bars-shared-utilities = { workspace = true }

[tool.uv.workspace]
members = [
    # "scripts",
    "backend",
]
exclude = [
    "slack-apps",
]

# =============================================================================
# RUFF CONFIGURATION (applies to all projects)
# =============================================================================
[tool.ruff]
line-length = 120
target-version = "py314"

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    ".venvs",
    "__pycache__",
    "node_modules",
    ".pytest_cache",
    ".ruff_cache",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "E303",  # Too many blank lines
]

# =============================================================================
# PYTEST CONFIGURATION (monorepo-wide)
# =============================================================================
[tool.pytest.ini_options]
# Test discovery paths for all projects
testpaths = [
    "backend/test",
    # "backend/routers/tests",
    # "lambda/functions/tests",
    # "shared_utilities/tests",
    # "lib/tests",
]

# Python path for imports
pythonpath = [
    ".",
    "backend",
    # "lambda/functions",
    # "lambda/layers/bars_common_utils",
    # "shared_utilities",
]

# Test execution options
addopts = [
    "-v",                    # Verbose output
    "--tb=short",            # Short traceback format
    "--strict-markers",      # Strict marker validation
    "--strict-config",       # Strict config validation
]

# Test markers
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# =============================================================================
# COVERAGE CONFIGURATION
# =============================================================================
[tool.coverage.run]
source = [
    "backend",
    # "lambda/functions",
    # "shared_utilities",
]
omit = [
    "*/tests/*",
    "*/.venv/*",
    "*/node_modules/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]


