[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bars-backend"
version = "0.1.0"
description = "BARS Backend Services"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "pydantic",
    "requests",
    "python-dotenv",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*", "orders*", "products*", "refunds*", "shopify*", "slack*", "shared*"]

[tool.setuptools.package-dir]
orders = "modules/orders"
products = "modules/products" 
refunds = "modules/refunds"
bars_shopify = "modules/integrations/shopify"
bars_slack = "modules/integrations/slack"
shared = "shared"

[tool.pyright]
extraPaths = [
    "./lambda-layers/bars-common-utils/python",
    "./lambda-functions/MoveInventoryLambda",
    "./lambda-functions/shopifyProductUpdateHandler", 
    "./lambda-functions/createScheduledPriceChanges",
    "./lambda-functions/schedulePriceChanges",
    "./lambda-functions/CreateScheduleLambda",
    "./lambda-functions/changePricesOfOpenAndWaitlistVariants"
]

stubPath = "backend/typings"

typeCheckingMode = "basic"

# Use local stubs for untyped third-party libs without requiring the package at runtime
reportMissingImports = "none"
reportMissingModuleSource = "none"

[tool.pytest.ini_options]
pythonpath = [
    "./lambda-layers/bars-common-utils/python",
    "./lambda-functions/MoveInventoryLambda",
    "./lambda-functions/shopifyProductUpdateHandler",
    "./lambda-functions/createScheduledPriceChanges", 
    "./lambda-functions/schedulePriceChanges",
    "./lambda-functions/CreateScheduleLambda",
    "./lambda-functions/changePricesOfOpenAndWaitlistVariants"
]

testpaths = ["lambda-functions/tests", "backend/routers/tests"]
addopts = "-v --tb=short" 

[tool.ariadne-codegen]
schema_path = "backend/modules/integrations/shopify/core/fetched_schema.json"
queries_path = "backend/modules/integrations/shopify/builders"
target_package_path = "backend/modules/integrations/shopify/generated_client"
client_name = "ShopifyGeneratedClient"
python_version = "3.11"
include_comments = true 