[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "bars-cli"
version = "1.0.0"
description = "Big Apple Rec Sports - CLI Tool"
requires-python = ">=3.11"
dependencies = [
    # Monorepo Dependencies
    "bars-shared-utilities",
    
    # CLI framework
    "click>=8.1.7",
    "click-extra>=0.15.0",
    "click-shell>=2.1",
    "questionary>=2.0.0",
    "rich>=13.7.0",
    
    # HTTP client with retry
    "httpx>=0.27.0",
    "tenacity>=8.0.0",
    "decorator>=5.1.0",
    
    # Data validation
    "pydantic>=2.12.0",
    "validator-collection>=1.5.0",
    
    # Configuration
    "python-dotenv>=1.0.1",
    
    # Utilities
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
# Backend service clients (install when needed)
services = [
    "google-api-python-client==2.154.0",
    "google-auth==2.37.0",
    "google-auth-oauthlib==1.2.1",
    "google-auth-httplib2==0.2.0",
    "slack-sdk==3.30.0",
    "slack-bolt==1.20.1",
    "sgqlc>=17.0",
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "PyYAML==6.0.2",
    "requests>=2.32.3",
]

dev = [
    # Project-specific dev dependencies only
    # (monorepo-wide tools like ruff, pytest are in root pyproject.toml)
]

[project.scripts]
bars = "bars_cli.main:cli"

[tool.setuptools]
packages = ["bars_cli"]
package-dir = {"bars_cli" = "."}

[tool.setuptools.package-data]
bars_cli = ["**/*.py"]

# =============================================================================
# UV SOURCES CONFIGURATION
# =============================================================================
[tool.uv.sources]
# Local package resolution for monorepo
bars-shared-utilities = { path = "../shared_utilities", editable = true }

# Note: Ruff configuration moved to root pyproject.toml for consistency
