[project]
name = "bars-lambda"
version = "1.0.0"
description = "Big Apple Rec Sports - Lambda Functions"
requires-python = ">=3.11"
dependencies = [
    # AWS SDK (provided by Lambda runtime, but needed for local dev)
    "boto3>=1.42.0",
]

[project.optional-dependencies]
dev = [
    # Project-specific dev dependencies only
    # (monorepo-wide tools like pytest, moto are in root pyproject.toml)
]

[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []  # Lambda functions are deployed as zip files, not packages

# =============================================================================
# UV SOURCES CONFIGURATION
# =============================================================================
[tool.uv.sources]
# Local package resolution for monorepo
bars-shared-utilities = { path = "../shared_utilities", editable = true }

[tool.pytest.ini_options]
pythonpath = [
    "functions",
    "layers/bars_common_utils",
    "functions/MoveInventoryLambda",
    "functions/shopifyProductUpdateHandler",
    "functions/ScheduleChangesForShopifyProductsLambda",
    "functions/setProductLiveByAddingInventory",
    "functions/changePricesOfOpenAndWaitlistVariants"
]
testpaths = ["functions/tests"]
addopts = "-v --tb=short"

[tool.pyright]
extraPaths = [
    "layers/bars_common_utils",
    "functions/MoveInventoryLambda",
    "functions/shopifyProductUpdateHandler",
    "functions/ScheduleChangesForShopifyProductsLambda",
    "functions/setProductLiveByAddingInventory",
    "functions/changePricesOfOpenAndWaitlistVariants"
]
