[project]
name = "bars-shared-utilities"
version = "1.0.0"
description = "Big Apple Rec Sports - Shared Utilities"
requires-python = ">=3.14"
dependencies = [
    # HTTP
    "httpx>=0.27.0",
    "requests>=2.32.0",
    "tenacity>=8.0.0",
    "decorator>=5.1.0",


    # Slack
    "slack-sdk>=3.30.0",
    "aiohttp>=3.9.0",
    # Google
    "google-auth>=2.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.2.0",
    "httplib2>=0.22.0",
    # Data validation
    "pydantic>=2.12.0",
    "pydantic-settings>=2.0.0",
    "validator-collection>=1.5.0",
    "datamodel-code-generator>=0.25.0",
    # Env / config
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "boto3>=1.34.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
where = [".."]
include = ["shared_utilities*"]

# =============================================================================
# PYRIGHT / PYLANCE
# =============================================================================
[tool.pyright]
# The workspace folder is shared_utilities/ itself, so go up one level
# so that `import shared_utilities.x` resolves correctly.
extraPaths = [".."]
venvPath = ".."
venv = ".venv"
