[project]
name = "bars-shared-utilities"
version = "1.0.0"
description = "Big Apple Rec Sports - Shared Utilities"
requires-python = ">=3.11"
dependencies = [
    # HTTP client with retry
    "httpx>=0.27.0",
    "tenacity>=8.0.0",
    "decorator>=5.1.0",
    
    # Data validation
    "pydantic>=2.12.0",
    "validator-collection>=1.5.0",
]

[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["shared_utilities"]
package-dir = {"shared_utilities" = "."}

# =============================================================================
# UV SOURCES CONFIGURATION
# =============================================================================
[tool.uv.sources]
# Self-reference for consistency in monorepo
bars-shared-utilities = { path = ".", editable = true }
