[project]
name = "bars-registrations"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "shopify-client",
    "decorator",
    "fastapi>=0.115.0",
    "gspread>=6.0.0",
    "google-auth>=2.0.0",
    "google-api-python-client>=2.0.0",
    "httpx[http2]>=0.27.0",
    "httpx-retries>=0.4.6",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "polars>=1.38.1",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-extra-types>=2.11.2",
]

[project.optional-dependencies]


[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-rich",
]


[tool.pytest.ini_options]
addopts = "-s -q --tb=line"
asyncio_mode = "auto"
pythonpath = ["."]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.14"

[tool.uv.sources]
shopify-client = { path = "../../lib/clients/shopify", editable = true }
