# Packaging for Lambda runtime happens in aws/lambda/layers/lib/shopify-client-py/, which
# copies these files into a `shopify_gql/` namespace inside the layer's python/ dir.

[project]
name = "shopify-client"
version = "1.0.0"
description = "Shopify Admin GraphQL client"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.27.0",
    "httpx-retries>=0.4.0",
    "gql>=4.3.0b3",
    "autoregistry>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py", "generated/**/*.py"]
sources = {"" = "shopify_client"}
