# The Lambda layer at aws/lambda/layers/lib/shopify-client (symlinked to this dir)
# bundles shop_client.py + the pickled schema with these exact dependency
# versions. See the README in this directory for the build/publish recipe.

[project]
name = "shopify-client"
version = "1.0.0"
description = "Shopify Admin GraphQL client (gql DSL + pickled schema)"
requires-python = ">=3.14"
# graphql-core is pinned because the bundled 2026-07.graphql.pickle is built
# against 3.2.11's internal AST classes — newer graphql-core makes some of
# those dataclasses frozen, which breaks pickle.load(). gql 4.0.x already
# constrains graphql-core<3.3, so pinning gql to 4.0.x keeps that constraint
# stable; gql 4.1+ may bump graphql-core to >=3.3 and break the pickle.
dependencies = [
    "gql[httpx]==4.0.0",
    "graphql-core==3.2.11",
    "autoregistry>=0.1.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py", "generated/**/*.py"]
sources = {"" = "shopify_client"}
